Completed all of the apps functionality

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,3 +16,23 @@ body {
   font-family: "Exo", "Montserrat", sans-serif;
   overflow: hidden;
 }
+
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #b1a697;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #f2e1ca;
+}
